// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/space/demo/align.md correctly 1`] = `
<div
  class="space-align-container"
>
  <div
    class="space-align-block"
  >
    <div
      class="ezd-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ezd-space-item"
        style="margin-right:8px"
      >
        center
      </div>
      <div
        class="ezd-space-item"
        style="margin-right:8px"
      >
        <button
          class="ezd-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="ezd-space-item"
      >
        <span
          class="mock-block"
        >
          Block
        </span>
      </div>
    </div>
  </div>
  <div
    class="space-align-block"
  >
    <div
      class="ezd-space ant-space-horizontal ant-space-align-start"
    >
      <div
        class="ezd-space-item"
        style="margin-right:8px"
      >
        start
      </div>
      <div
        class="ezd-space-item"
        style="margin-right:8px"
      >
        <button
          class="ezd-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="ezd-space-item"
      >
        <span
          class="mock-block"
        >
          Block
        </span>
      </div>
    </div>
  </div>
  <div
    class="space-align-block"
  >
    <div
      class="ezd-space ant-space-horizontal ant-space-align-end"
    >
      <div
        class="ezd-space-item"
        style="margin-right:8px"
      >
        end
      </div>
      <div
        class="ezd-space-item"
        style="margin-right:8px"
      >
        <button
          class="ezd-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="ezd-space-item"
      >
        <span
          class="mock-block"
        >
          Block
        </span>
      </div>
    </div>
  </div>
  <div
    class="space-align-block"
  >
    <div
      class="ezd-space ant-space-horizontal ant-space-align-baseline"
    >
      <div
        class="ezd-space-item"
        style="margin-right:8px"
      >
        baseline
      </div>
      <div
        class="ezd-space-item"
        style="margin-right:8px"
      >
        <button
          class="ezd-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="ezd-space-item"
      >
        <span
          class="mock-block"
        >
          Block
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/space/demo/base.md correctly 1`] = `
<div
  class="ezd-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    Space
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    <button
      class="ezd-btn ant-btn-primary"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    <span
      class=""
    >
      <div
        class="ezd-upload ant-upload-select ant-upload-select-text"
      >
        <span
          class="ezd-upload"
          role="button"
          tabindex="0"
        >
          <input
            accept=""
            style="display:none"
            type="file"
          />
          <button
            class="ezd-btn"
            type="button"
          >
            <span
              aria-label="upload"
              class="anticon anticon-upload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="upload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            <span>
               Click to Upload
            </span>
          </button>
        </span>
      </div>
      <div
        class="ezd-upload-list ant-upload-list-text"
      />
    </span>
  </div>
  <div
    class="ezd-space-item"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Confirm
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/space/demo/customize.md correctly 1`] = `
Array [
  <div
    class="ezd-slider"
  >
    <div
      class="ezd-slider-rail"
    />
    <div
      class="ezd-slider-track"
      style="left:0%;right:auto;width:8%"
    />
    <div
      class="ezd-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="8"
      class="ezd-slider-handle"
      role="slider"
      style="left:8%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="ezd-slider-mark"
    />
  </div>,
  <br />,
  <br />,
  <div
    class="ezd-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <button
        class="ezd-btn ant-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
    </div>
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <button
        class="ezd-btn"
        type="button"
      >
        <span>
          Default
        </span>
      </button>
    </div>
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <button
        class="ezd-btn ant-btn-dashed"
        type="button"
      >
        <span>
          Dashed
        </span>
      </button>
    </div>
    <div
      class="ezd-space-item"
    >
      <button
        class="ezd-btn ant-btn-link"
        type="button"
      >
        <span>
          Link
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders ./components/space/demo/debug.md correctly 1`] = `
<div
  class="ezd-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    Button
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    Button
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    <span
      class="ezd-popover-disabled-compatible-wrapper"
      style="display:inline-block;cursor:not-allowed"
    >
      <button
        class="ezd-btn"
        disabled=""
        style="pointer-events:none"
        type="button"
      >
        <span>
          Delete
        </span>
      </button>
    </span>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px"
  >
    1
  </div>
  <div
    class="ezd-space-item"
  >
    Button
  </div>
</div>
`;

exports[`renders ./components/space/demo/gap-in-line.md correctly 1`] = `
Array [
  <button
    aria-checked="false"
    class="ezd-switch"
    role="switch"
    type="button"
  >
    <div
      class="ezd-switch-handle"
    />
    <span
      class="ezd-switch-inner"
    />
  </button>,
  <div
    style="box-shadow:0 0 5px green"
  >
    <div
      class="ezd-space ant-space-horizontal ant-space-align-center"
      style="flex-wrap:wrap;margin-bottom:-8px;width:310px;background:blue"
    >
      <div
        class="ezd-space-item"
        style="margin-right:8px;padding-bottom:8px"
      >
        <div
          style="width:150px;height:100px;background:red"
        />
      </div>
      <div
        class="ezd-space-item"
        style="margin-right:8px;padding-bottom:8px"
      >
        <div
          style="width:150px;height:100px;background:red"
        />
      </div>
      <div
        class="ezd-space-item"
        style="margin-right:8px;padding-bottom:8px"
      >
        <div
          style="width:150px;height:100px;background:red"
        />
      </div>
      <div
        class="ezd-space-item"
        style="padding-bottom:8px"
      >
        <div
          style="width:150px;height:100px;background:red"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/space/demo/size.md correctly 1`] = `
Array [
  <div
    class="ezd-radio-group ant-radio-group-outline"
  >
    <label
      class="ezd-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ezd-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ezd-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ezd-radio-wrapper"
    >
      <span
        class="ezd-radio"
      >
        <input
          class="ezd-radio-input"
          type="radio"
          value="middle"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Middle
      </span>
    </label>
    <label
      class="ezd-radio-wrapper"
    >
      <span
        class="ezd-radio"
      >
        <input
          class="ezd-radio-input"
          type="radio"
          value="large"
        />
        <span
          class="ezd-radio-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ezd-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <button
        class="ezd-btn ant-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
    </div>
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <button
        class="ezd-btn"
        type="button"
      >
        <span>
          Default
        </span>
      </button>
    </div>
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <button
        class="ezd-btn ant-btn-dashed"
        type="button"
      >
        <span>
          Dashed
        </span>
      </button>
    </div>
    <div
      class="ezd-space-item"
    >
      <button
        class="ezd-btn ant-btn-link"
        type="button"
      >
        <span>
          Link
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders ./components/space/demo/split.md correctly 1`] = `
<div
  class="ezd-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ezd-space-item"
    style="margin-right:4px"
  >
    <a
      class="ezd-typography"
    >
      Link
    </a>
  </div>
  <span
    class="ezd-space-item-split"
    style="margin-right:4px"
  >
    <div
      class="ezd-divider ant-divider-vertical"
      role="separator"
    />
  </span>
  <div
    class="ezd-space-item"
    style="margin-right:4px"
  >
    <a
      class="ezd-typography"
    >
      Link
    </a>
  </div>
  <span
    class="ezd-space-item-split"
    style="margin-right:4px"
  >
    <div
      class="ezd-divider ant-divider-vertical"
      role="separator"
    />
  </span>
  <div
    class="ezd-space-item"
  >
    <a
      class="ezd-typography"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`renders ./components/space/demo/vertical.md correctly 1`] = `
<div
  class="ezd-space ant-space-vertical"
>
  <div
    class="ezd-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="ezd-card ant-card-bordered"
      style="width:300px"
    >
      <div
        class="ezd-card-head"
      >
        <div
          class="ezd-card-head-wrapper"
        >
          <div
            class="ezd-card-head-title"
          >
            Card
          </div>
        </div>
      </div>
      <div
        class="ezd-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
  </div>
  <div
    class="ezd-space-item"
  >
    <div
      class="ezd-card ant-card-bordered"
      style="width:300px"
    >
      <div
        class="ezd-card-head"
      >
        <div
          class="ezd-card-head-wrapper"
        >
          <div
            class="ezd-card-head-title"
          >
            Card
          </div>
        </div>
      </div>
      <div
        class="ezd-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/space/demo/wrap.md correctly 1`] = `
<div
  class="ezd-space ant-space-horizontal ant-space-align-center"
  style="flex-wrap:wrap;margin-bottom:-16px"
>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="margin-right:8px;padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ezd-space-item"
    style="padding-bottom:16px"
  >
    <button
      class="ezd-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
